Group check-in: all members must QR verify (SR-09)